--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha __test__/**.test.js --sort --exit"
+    "test": "mocha __test__/01_setup.test.js --sort --exit"
   },
   "dependencies": {
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
     "mysql2": "^2.1.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "sequelize": "^6.3.4"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "mocha": "^8.0.1",
+    "sequelize-cli": "^6.2.0",
     "sinon": "^9.0.2"
   }
 }
