--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha __test__/01_setup.test.js --sort --exit"
+    "test": "mocha __test__/02_controller.test.js --sort --exit"
   },
   "dependencies": {
     "debug": "~2.6.9",
